# Banking-Support-Chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/api/: chat.py  upload.py
backend/rag/: chain.py  chunker.py  embedding.py  loader.py  retriever.py  vectorstore.py
frontend/: app.py
notebook/: rag.ipynb
